package app.ui.console;

public class SpecifieANewTypeOfTestUI {
}
